--- a/nginx-aws-template.json
+++ b/nginx-aws-template.json
@@ -1,14 +1,18 @@
 {
   "variables": {
-    "aws_access_key": "",
-    "aws_secret_key": ""
+    "aws_access_key": "{{env `AWS_ACCESS_KEY_ID`}}",
+    "aws_secret_key": "{{env `AWS_SECRET_ACCESS_KEY`}}",
+    "region":         "eu-central-1"  
   },
   "builders": [
     {
       "type": "amazon-ebs",
       "access_key": "{{user `aws_access_key`}}",
       "secret_key": "{{user `aws_secret_key`}}",
-      "region": "us-east-1",
+      "tags": {
+        "PackerBuildUUID": "{{user `build_uuid`}}"
+      },      
+      "region": "{{user `region`}}",
       "source_ami_filter": {
         "filters": {
           "virtualization-type": "hvm",
@@ -22,7 +26,7 @@
       },
       "instance_type": "t2.micro",
       "ssh_username": "ubuntu",
-      "ami_name": "nginx-aws {{timestamp}}"
+      "ami_name": "nginx-aws-{{timestamp}}"
     }
   ],
   "provisioners": [
