--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,7 +9,7 @@ provisioner:
 platforms:
   - name: ubuntu-16.04
     driver:
-      image_id: ami-016e3d2171e81938a
+      image_id: 
     transport:
       username: ubuntu
 
