--- a/nginx-aws-template.json
+++ b/nginx-aws-template.json
@@ -9,9 +9,6 @@
       "type": "amazon-ebs",
       "access_key": "{{user `aws_access_key`}}",
       "secret_key": "{{user `aws_secret_key`}}",
-      "tags": {
-        "PackerBuildUUID": "{{user `build_uuid`}}"
-      },      
       "region": "{{user `region`}}",
       "source_ami_filter": {
         "filters": {
@@ -34,5 +31,12 @@
       "type": "shell",
       "script": "scripts/provision-nginx.sh"
     }
-  ]
+  ],
+  "post-processors": [
+    {
+      "type": "manifest",
+      "output": "manifest.json",
+      "strip_path": true
+    }
+  ]  
 }
